[tool.poetry]
name = "DepthFlow"
version = "2023.7.14"
description = "Image to 2.5D Parallax Effect Video"
authors = ["Tremeschin"]
license = "AGPLv3-only"

[[tool.poetry.packages]]
include = "DepthFlow"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
broken = {path="../../", develop=true}
moderngl = "^5.8.2"
numpy = "^1.25.0"
imageio-ffmpeg = "^0.4.8"
webuiapi = "^0.9.3"
timm = "0.6.7"
intervaltree = "^3.1.0"

# Don't have NVIDIA GPU or want to run nightly/cpu only?
# - Add source="torch" to the next line and uncomment some url on [tool.poetry.source] below
torch = {version="^2.0.1", source="torch"}
torchvision = {version="0.15.2", source="torch"}

# FIXME: Temporary for keyframes validation, remove after
plotly = "^5.15.0"
transformers = {git = "https://github.com/huggingface/transformers.git"}
gradio = "^3.36.1"

[tool.poetry.scripts]
depthflow = "DepthFlow.__main__:main"

[[tool.poetry.source]]
name = "torch"
priority = "explicit"

# For AMD GPU with ROCm or CPU only, uncomment the correct line below and change torch source
# · Thanks: https://github.com/python-poetry/poetry/issues/6409#issuecomment-1561521272

# FIXME: Maybe MacOS ?
# url = "https://download.pytorch.org/whl"

# CPU Only
# url = "https://download.pytorch.org/whl/cpu"

# AMD GPU - ROCm
# url = "https://download.pytorch.org/whl/rocm5.4.2"
# url = "https://download.pytorch.org/whl/nightly/rocm5.5"

# NVIDIA GPU - CUDA
url = "https://download.pytorch.org/whl/cu118"
# url = "https://download.pytorch.org/whl/nightly/cu118"
# url = "https://download.pytorch.org/whl/nightly/cu121"
